club search scroll overlap fix

--- a/frontend/src/pages/ClubSearch/Clubs.css
+++ b/frontend/src/pages/ClubSearch/Clubs.css
@@ -36,6 +36,11 @@
    font-size: 16px;
 }
 
+.clubs-list-container {
+   width: 100%;
+   overflow-y: auto;
+}
+
 .clubs-list {
    width: 75%;
    display: flex;
@@ -43,6 +48,7 @@
    gap: 20px;
    padding-top: 50px;
    padding-bottom: 50px;
+   max-height: 70vh;
 }
 
 .club-card {
